--- a/design/styles.css
+++ b/design/styles.css
@@ -2,130 +2,158 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+
 }
 
 body {
-    background-color: white;
+    background-color: white
 }
 
 /* --- LANDING PAGE HEADER --- */
-header {
-    position: relative;
-    height: 700px;
-    background-color: #05386b;
-    -webkit-clip-path: polygon(0 0, 100% 0, 100% 35%, 10% 79%, 0 71%);
-    clip-path: polygon(0 0, 100% 0, 100% 35%, 10% 79%, 0 71%);
+.outter {
+  width:100%;
+  height:100%;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
 }
 
-.logo {
-    font-family: le-havre-rounded,sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    color: white;
-    font-size: 1.5rem;
+.video-container {
+  height: 100vh;
+  object-fit: fill;
+  position: relative;
+  overflow: hidden;
 }
 
-.navbar-light .navbar-nav .nav-link, .nav-link {
-    font-family: le-havre-rounded,sans-serif;
-    font-weight: 700;
-    font-style: normal;
-    color: white;
-    font-size: 1.2rem;
+video {
+  object-fit: cover; 
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  top: 0;
+  left: 0;
+  min-width: 100%;
 }
 
-.landing-page-content {
-    font-family: proxima-soft,sans-serif;
-    font-weight: 600;
+.video-container:after {
+  content: '';
+  display: block;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+h1 {
+  text-transform: uppercase;
+  font-weight: 900;
+  margin: 0 0 1rem;
+  padding: 0;
+  line-height: 1;
+  font-family: ff-ginger-pro,sans-serif;
+  font-weight: 300;
+  font-style: normal;
+  color: white;
+  font-size: 5vw;
+  font-weight:700;
+}
+
+.desc{
+  color: white;
+  font-weight:400;
+  font-size:18px;
+}
+
+.callout {
+  position: relative;
+  display: flex;
+  justify-content:center;
+  align-items: center;
+  flex-direction: column;
+  height: 100%;
+  text-align: center;
+  position: relative;
+  z-index: 10;
+  width: 70%;
+  margin:auto;
+}
+
+.button {
+  text-transform:uppercase;
+  background-color:transparent;
+  padding: 2%;
+  border:1px solid white;
+  margin-top:20px;
+}
+
+.support {
+  position: fixed;
+  bottom: 60px;
+  right: 20px;
+  text-transform: uppercase;
+  font-size: 9px;
+  letter-spacing: 1px;
+  text-align: right;
+  position: relative;
+  z-index: 10;
+}
+
+.inner {
+    color: white;
+    font-family: ff-ginger-pro,sans-serif;
+    font-weight: 300;
+    font-style: normal;
+}
+
+.nav {
+    background-color: #BC4C0D;
+    min-width: 100%;
+}
+/* --- /LANDING PAGE HEADER --- */
+
+/* --- NAV PAGE --- */
+.nav-link {
+    font-family: ff-ginger-pro,sans-serif;
+    font-weight: 500;
     font-style: normal;
     color: white;
-    font-size: 1.8rem;
-    margin-top: 0.5rem;
+    font-size: 1rem;
 }
 
 .landing-page-description {
-    font-family: proxima-soft,sans-serif;
-    font-weight: 600;
+    font-family: mr-eaves-modern,sans-serif;
+    font-weight: 500;
     font-style: normal;
     color: white;
-    font-size: 1rem;
+    font-size: 1.3rem;
+}
+/* --- /NAV PAGE --- */
+
+.background-design {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
 }
 
-.landing-page-description2 {
-    font-family: proxima-soft,sans-serif;
-    font-weight: 600;
-    font-style: bold;
-    color: white;
-    font-size: 1rem;
-    margin-top: 1rem;
+.skill {
+  position: relative;
+  background-color: #BC4C0D;
+  border-radius: 10%;
+  color: white;
+  font-family: ff-ginger-pro,sans-serif;
+  font-weight: 200;
+  font-style: normal;
+  border: 5px solid white;
 }
 
-/* --- LANDING PAGE MAIN --- */
-.main-page {
-    display: flex;
-    flex-wrap: wrap;
-    font-family: proxima-soft,sans-serif;
-    align-items: flex-start;
-    font-weight: 600;
-    color: #05386b;
-    margin-top: -8rem;
-    line-height: 200%;
-    font-style: normal;
-    font-size: 1rem;
-    justify-content: center;
+.skill h5 {
+  font-family: ff-ginger-pro,sans-serif;
+  font-weight: 500;
+  font-style: normal;
 }
 
-.main-page-content {
-    padding-right: 25px;
-    padding-left: 25px;
-    padding-bottom: 20px;
-    line-height: 100%;
-}
 
-.main-page-content2 {
-    line-height: 100%;
-}
-
-.shape {
-    height: 10rem;
-    -webkit-clip-path: polygon(0% 11%, 100% 11%, 100% 100%, 0 100%, 0 0);
-    clip-path: polygon(0% 11%, 100% 11%, 100% 100%, 0 100%, 0 0);
-    background-color: #05386b;
-    margin-top: -2rem;
-}
-
-/* --- /LANDING PAGE MAIN --- */
-
-
-/* --- MEDIA QUERY --- */
-@media only screen and (min-width: 528px) {
-    .main-page-content3 br {
-        display: none;
-    }
-
-    .main-page {
-        margin-top: -8rem;
-    }
-}
-
-@media only screen and (min-width: 1400px) {
-    .step {
-        margin-top: -2%;
-    }
-
-    .step1 {
-        margin-top: -6%;
-    }
-
-    .step2 {
-        margin-top: -9.5%;
-    }
-
-    .step3 {
-        margin-top: -13%;
-    }
-    
-    .step4 {
-        margin-top: -17%;
-    }
-}
-/* --- /MEDIA QUERY --- */
