--- a/design/styles.css
+++ b/design/styles.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-color: white
+    background-color: white;
 }
 
 /* --- LANDING PAGE HEADER --- */
@@ -61,7 +61,7 @@ h1 {
   font-weight:700;
 }
 
-.desc{
+.desc {
   color: white;
   font-weight:400;
   font-size:18px;
@@ -130,6 +130,14 @@ h1 {
     color: white;
     font-size: 1.3rem;
 }
+
+.square {
+  position: absolute;
+  background-color: #BC4C0D;
+  width: 2rem;
+  height: 2rem;
+  color: black;
+}
 /* --- /NAV PAGE --- */
 
 
@@ -138,7 +146,8 @@ h1 {
   position: absolute;
   display: flex;
   flex-direction: column;
-  width: 100%;
+  max-width: 100%;
+
 }
 
 .skill {
@@ -160,7 +169,6 @@ h1 {
 /* --- /SKILL PAGE --- */
 
 
-
 /* --- /WHO PAGE --- */
 .who {
   position: relative;
@@ -172,11 +180,6 @@ h1 {
   padding: 5%;
 }
 /* --- /WHO PAGE --- */
-
-
-
-
-
 
 /* --- RECENT WORK --- */
 .recent-work .card {
@@ -195,14 +198,119 @@ h1 {
   text-align: left;
 }
 
-.recent-description {
-  position: relative;
-  font-family: ff-ginger-pro,sans-serif;
-  font-weight: 400;
-  font-style: normal;
+.recent-work img {
+  border-radius: 10%;
+}
+
+.blocks {
+  display: flex;
+  justify-content: center;
+}
+
+.blocks1 {
+  display: flex;
+}
+
+.blocks2 {
+  display: flex;
+  justify-content: flex-end
+}
+
+.element {
+  position: absolute;
+  display: inline-block;
+  background-color: #BC4C0D;
+  height: 100px;
+  width: 100px;
+  font-size: 1px;
   color: black;
-  font-size: 1.2rem;
-  text-align: left;
+  animation: roll 5s infinite;
+  transform: rotate(30deg);
+  opacity: 0.7;
+}
+
+.element1 {
+  position: absolute;
+  display: inline-block;
+  background-color: #BC4C0D;
+  height: 100px;
+  width: 100px;
+  font-size: 1px;
+  color: black;
+  animation: roll 5s infinite;
+  transform: rotate(30deg);
+  opacity: 0.7;
+}
+
+.element2 {
+  position: absolute;
+  display: inline-block;
+  background-color: #BC4C0D;
+  height: 100px;
+  width: 100px;
+  font-size: 1px;
+  color: black;
+  animation: roll 5s infinite;
+  transform: rotate(30deg);
+  opacity: 0.7;
 }
 /* --- /RECENT WORK --- */
 
+
+/* --- SOCIAL-ICONS --- */
+.social-icons {
+  display: flex;
+  justify-content: space-evenly;
+}
+.social-icons svg{
+  background-color: #BC4C0D;
+  width:60px; 
+  height:60px;
+  color: white;
+  border-radius: 30%;
+  padding:0.5%;
+} 
+/* --- /SOCIAL-ICONS --- */
+
+/* RECENT-WORK-BUTTON */
+
+.recent-work-button {
+  position: relative;
+  background-color: white;
+  font-family: ff-ginger-pro,sans-serif;
+  font-style: normal;
+  color: white;
+  border-radius: 5%;
+  border: 10px solid #BC4C0D;
+  width: 40%;
+  margin-top: 8rem;
+}
+
+.recent-work-button button {
+  font-size:1.5rem;
+  background-color: white;
+  border: 5px solid #BC4C0D;
+  padding: 1%;
+  color: #BC4C0D;
+}
+
+.recent-work-button p {
+  font-family: ff-ginger-pro,sans-serif;
+  font-style: normal;
+  color: #BC4C0D;
+  font-size: 3rem;
+
+}
+/* ---/RECENT-WORK-BUTTON */
+
+
+/* --- FOOTER --- */
+.footer {
+  clip-path: polygon(50% 0%, 100% 38%, 100% 100%, 0 100%, 0% 38%);
+  width: 100%;
+  height: 15rem;
+  background: #BC4C0D;
+  bottom: 0;
+  margin-top: 7rem;
+}
+/* --- FOOTER --- */
