added hyperlink to icons and projects

--- a/design/styles.css
+++ b/design/styles.css
@@ -1,337 +1,349 @@
 * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 
 }
 
 body {
-    background-color: #FFFFFF;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23BC4C0D' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23FFFFFF'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");}
+  background-color: #FFFFFF;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='200' height='200' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%23BC4C0D' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%23FFFFFF'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
+}
 
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
+
+a:hover {
+  color: rgb(112, 0, 0); /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
 /* --- LANDING PAGE HEADER --- */
 .outter {
-  width:100%;
-  height:100%;
-  display:flex;
-  flex-direction:column;
-  justify-content:center;
+width:100%;
+height:100%;
+display:flex;
+flex-direction:column;
+justify-content:center;
 }
 
 .video-container {
-  height: 100vh;
-  object-fit: fill;
-  position: relative;
-  overflow: hidden;
+height: 100vh;
+object-fit: fill;
+position: relative;
+overflow: hidden;
 }
 
 video {
-  object-fit: cover; 
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
-  top: 0;
-  left: 0;
-  min-width: 100%;
+object-fit: cover; 
+position: absolute;
+width: 100vw;
+height: 100vh;
+object-fit: cover;
+top: 0;
+left: 0;
+min-width: 100%;
 }
 
 .video-container:after {
-  content: '';
-  display: block;
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1;
+content: '';
+display: block;
+height: 100%;
+width: 100%;
+position: absolute;
+top: 0;
+left: 0;
+z-index: 1;
 }
 
 h1 {
-  text-transform: uppercase;
-  font-weight: 900;
-  margin: 0 0 1rem;
-  padding: 0;
-  line-height: 1;
-  font-family: ff-ginger-pro,sans-serif;
-  font-weight: 300;
-  font-style: normal;
-  color: white;
-  font-size: 5vw;
-  font-weight:700;
+text-transform: uppercase;
+font-weight: 900;
+margin: 0 0 1rem;
+padding: 0;
+line-height: 1;
+font-family: ff-ginger-pro,sans-serif;
+font-weight: 300;
+font-style: normal;
+color: white;
+font-size: 5vw;
+font-weight:700;
 }
 
 .desc {
-  color: white;
-  font-weight:400;
-  font-size:18px;
+color: white;
+font-weight:400;
+font-size:18px;
 }
 
 .callout {
-  position: relative;
-  display: flex;
-  justify-content:center;
-  align-items: center;
-  flex-direction: column;
-  height: 100%;
-  text-align: center;
-  position: relative;
-  z-index: 10;
-  width: 70%;
-  margin:auto;
+position: relative;
+display: flex;
+justify-content:center;
+align-items: center;
+flex-direction: column;
+height: 100%;
+text-align: center;
+position: relative;
+z-index: 10;
+width: 70%;
+margin:auto;
 }
 
 .button {
-  text-transform:uppercase;
-  background-color:transparent;
-  padding: 2%;
-  border:1px solid white;
-  margin-top:20px;
+text-transform:uppercase;
+background-color:transparent;
+padding: 2%;
+border:1px solid white;
+margin-top:20px;
 }
 
 .support {
-  position: fixed;
-  bottom: 60px;
-  right: 20px;
-  text-transform: uppercase;
-  font-size: 9px;
-  letter-spacing: 1px;
-  text-align: right;
-  position: relative;
-  z-index: 10;
+position: fixed;
+bottom: 60px;
+right: 20px;
+text-transform: uppercase;
+font-size: 9px;
+letter-spacing: 1px;
+text-align: right;
+position: relative;
+z-index: 10;
 }
 
 .inner {
-    color: white;
-    font-family: ff-ginger-pro,sans-serif;
-    font-weight: 300;
-    font-style: normal;
+  color: white;
+  font-family: ff-ginger-pro,sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
 /* --- /LANDING PAGE HEADER --- */
 
 /* --- NAV PAGE --- */
 .nav {
-  background-image: linear-gradient(
-    45deg,
-    hsl(22deg 87% 39%) 0%,
-    hsl(22deg 100% 34%) 7%,
-    hsl(19deg 100% 31%) 11%,
-    hsl(15deg 100% 28%) 15%,
-    hsl(9deg 100% 25%) 18%,
-    hsl(0deg 100% 22%) 22%,
-    hsl(0deg 100% 19%) 28%,
-    hsl(0deg 100% 16%) 37%,
-    hsl(0deg 100% 14%) 55%,
-    hsl(0deg 0% 0%) 100%
-  );
-    min-width: 100%;
+background-image: linear-gradient(
+  45deg,
+  hsl(22deg 87% 39%) 0%,
+  hsl(22deg 100% 34%) 7%,
+  hsl(19deg 100% 31%) 11%,
+  hsl(15deg 100% 28%) 15%,
+  hsl(9deg 100% 25%) 18%,
+  hsl(0deg 100% 22%) 22%,
+  hsl(0deg 100% 19%) 28%,
+  hsl(0deg 100% 16%) 37%,
+  hsl(0deg 100% 14%) 55%,
+  hsl(0deg 0% 0%) 100%
+);
+  min-width: 100%;
 }
 
 .nav-link {
-    font-family: ff-ginger-pro,sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    color: white;
-    font-size: 1rem;
+  font-family: ff-ginger-pro,sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  color: white;
+  font-size: 1rem;
 }
 
 .landing-page-description {
-    font-family: mr-eaves-modern,sans-serif;
-    font-weight: 500;
-    font-style: normal;
-    color: white;
-    font-size: 1.3rem;
+  font-family: mr-eaves-modern,sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  color: white;
+  font-size: 1.3rem;
 }
 /* --- /NAV PAGE --- */
 
 /* --- SKILL PAGE --- */
 .skill {
-  position: relative;
-  background-image: linear-gradient(
-    45deg,
-    hsl(22deg 87% 39%) 0%,
-    hsl(22deg 100% 34%) 7%,
-    hsl(19deg 100% 31%) 11%,
-    hsl(15deg 100% 28%) 15%,
-    hsl(9deg 100% 25%) 18%,
-    hsl(0deg 100% 22%) 22%,
-    hsl(0deg 100% 19%) 28%,
-    hsl(0deg 100% 16%) 37%,
-    hsl(0deg 100% 14%) 55%,
-    hsl(0deg 0% 0%) 100%
-  );
-  border-radius: 10%;
-  color: white;
-  font-family: ff-ginger-pro,sans-serif;
-  font-weight: 200;
-  font-style: normal;
-  border: 5px solid white;
+position: relative;
+background-image: linear-gradient(
+  45deg,
+  hsl(22deg 87% 39%) 0%,
+  hsl(22deg 100% 34%) 7%,
+  hsl(19deg 100% 31%) 11%,
+  hsl(15deg 100% 28%) 15%,
+  hsl(9deg 100% 25%) 18%,
+  hsl(0deg 100% 22%) 22%,
+  hsl(0deg 100% 19%) 28%,
+  hsl(0deg 100% 16%) 37%,
+  hsl(0deg 100% 14%) 55%,
+  hsl(0deg 0% 0%) 100%
+);
+border-radius: 10%;
+color: white;
+font-family: ff-ginger-pro,sans-serif;
+font-weight: 200;
+font-style: normal;
+border: 5px solid white;
 }
 
 .skill h5 {
-  font-family: ff-ginger-pro,sans-serif;
-  font-weight: 500;
-  font-style: normal;
+font-family: ff-ginger-pro,sans-serif;
+font-weight: 500;
+font-style: normal;
 }
 /* --- /SKILL PAGE --- */
 
 /* --- /WHO PAGE --- */
 .who {
-  position: relative;
-  background-image: linear-gradient(
-    45deg,
-    hsl(22deg 87% 39%) 0%,
-    hsl(22deg 100% 34%) 7%,
-    hsl(19deg 100% 31%) 11%,
-    hsl(15deg 100% 28%) 15%,
-    hsl(9deg 100% 25%) 18%,
-    hsl(0deg 100% 22%) 22%,
-    hsl(0deg 100% 19%) 28%,
-    hsl(0deg 100% 16%) 37%,
-    hsl(0deg 100% 14%) 55%,
-    hsl(0deg 0% 0%) 100%
-  );
-  color: white;
-  font-family: ff-ginger-pro,sans-serif;
-  font-weight: 200;
-  font-style: normal;
-  border-radius: 5%;
-  padding: 5%;
+position: relative;
+background-image: linear-gradient(
+  45deg,
+  hsl(22deg 87% 39%) 0%,
+  hsl(22deg 100% 34%) 7%,
+  hsl(19deg 100% 31%) 11%,
+  hsl(15deg 100% 28%) 15%,
+  hsl(9deg 100% 25%) 18%,
+  hsl(0deg 100% 22%) 22%,
+  hsl(0deg 100% 19%) 28%,
+  hsl(0deg 100% 16%) 37%,
+  hsl(0deg 100% 14%) 55%,
+  hsl(0deg 0% 0%) 100%
+);
+color: white;
+font-family: ff-ginger-pro,sans-serif;
+font-weight: 200;
+font-style: normal;
+border-radius: 5%;
+padding: 3%;
+}
+
+.who h1 {
+  font-size: 1.6rem;
 }
 /* --- /WHO PAGE --- */
 
 /* --- SOCIAL-ICONS --- */
 .social-icons {
-  display: flex;
-  justify-content: space-evenly;
+display: flex;
+justify-content: space-evenly;
 }
 
 .social-icons svg{
-  background-image: linear-gradient(
-    45deg,
-    hsl(22deg 87% 39%) 0%,
-    hsl(22deg 100% 34%) 7%,
-    hsl(19deg 100% 31%) 11%,
-    hsl(15deg 100% 28%) 15%,
-    hsl(9deg 100% 25%) 18%,
-    hsl(0deg 100% 22%) 22%,
-    hsl(0deg 100% 19%) 28%,
-    hsl(0deg 100% 16%) 37%,
-    hsl(0deg 100% 14%) 55%,
-    hsl(0deg 0% 0%) 100%
-  );
-  width:50px; 
-  height:50px;
-  color: white;
-  border-radius: 30%;
-  padding:0.5%;
+background-image: linear-gradient(
+  45deg,
+  hsl(22deg 87% 39%) 0%,
+  hsl(22deg 100% 34%) 7%,
+  hsl(19deg 100% 31%) 11%,
+  hsl(15deg 100% 28%) 15%,
+  hsl(9deg 100% 25%) 18%,
+  hsl(0deg 100% 22%) 22%,
+  hsl(0deg 100% 19%) 28%,
+  hsl(0deg 100% 16%) 37%,
+  hsl(0deg 100% 14%) 55%,
+  hsl(0deg 0% 0%) 100%
+);
+width:30px; 
+height:30px;
+color: white;
+border-radius: 30%;
+padding:5%;
 } 
 .grow svg {
-  transition: 0.5s ease;
-  }
-  
-  .grow svg:hover{
-  -webkit-transform: scale(0.8);
-  -ms-transform: scale(0.8);
-  transform: scale(1.5);
-  transition: 1s ease;
-  }
+transition: 0.5s ease;
+}
+
+.grow svg:hover{
+-webkit-transform: scale(0.8);
+-ms-transform: scale(0.8);
+transform: scale(1.5);
+transition: 1s ease;
+}
 /* --- /SOCIAL-ICONS --- */
 
 /* --- RECENT-WORK-BUTTON --- */
 .recent-work-button {
-  position: relative;
-  background-image: linear-gradient(
-    45deg,
-    hsl(22deg 87% 39%) 0%,
-    hsl(22deg 100% 34%) 7%,
-    hsl(19deg 100% 31%) 11%,
-    hsl(15deg 100% 28%) 15%,
-    hsl(9deg 100% 25%) 18%,
-    hsl(0deg 100% 22%) 22%,
-    hsl(0deg 100% 19%) 28%,
-    hsl(0deg 100% 16%) 37%,
-    hsl(0deg 100% 14%) 55%,
-    hsl(0deg 0% 0%) 100%
-  );
-  font-family: ff-ginger-pro,sans-serif;
-  font-style: italic;
-  color: white;
-  margin-top: 4rem;
-  padding: 2%;
+position: relative;
+background-image: linear-gradient(
+  45deg,
+  hsl(22deg 87% 39%) 0%,
+  hsl(22deg 100% 34%) 7%,
+  hsl(19deg 100% 31%) 11%,
+  hsl(15deg 100% 28%) 15%,
+  hsl(9deg 100% 25%) 18%,
+  hsl(0deg 100% 22%) 22%,
+  hsl(0deg 100% 19%) 28%,
+  hsl(0deg 100% 16%) 37%,
+  hsl(0deg 100% 14%) 55%,
+  hsl(0deg 0% 0%) 100%
+);
+font-family: ff-ginger-pro,sans-serif;
+font-style: italic;
+color: white;
+margin-top: 4rem;
+padding: 2%;
 }
 
 .recent-work-button button {
-  font-size:1rem;
-  background-color: transparent;
-  padding-left: 1%;
-  padding-right: 1%;
-  color: white;
-  border: 1px solid white;
+font-size:1rem;
+background-color: transparent;
+padding-left: 1%;
+padding-right: 1%;
+color: white;
+border: 1px solid white;
 }
 
 .recent-work-button p {
-  font-size: 1.3rem;
+font-size: 1.3rem;
 }
 /* ---/RECENT-WORK-BUTTON */
 
 /* --- RECENT-WORK-CARDS --- */
 .recent-work .card {
-  font-family: ff-ginger-pro,sans-serif;
-  font-weight: 200;
-  font-style: normal;
-  background-color: white;
-  border-radius: 5%;
-  color: black;
+font-family: ff-ginger-pro,sans-serif;
+font-weight: 200;
+font-style: normal;
+background-color: white;
+border-radius: 5%;
+color: black;
 }
 
 .recent-heading {
-  position: relative;
-  font-size: 2rem;
-  text-align: left;
-  color: white;
-  background-image: linear-gradient(
-    45deg,
-    hsl(22deg 87% 39%) 0%,
-    hsl(22deg 100% 34%) 7%,
-    hsl(19deg 100% 31%) 11%,
-    hsl(15deg 100% 28%) 15%,
-    hsl(9deg 100% 25%) 18%,
-    hsl(0deg 100% 22%) 22%,
-    hsl(0deg 100% 19%) 28%,
-    hsl(0deg 100% 16%) 37%,
-    hsl(0deg 100% 14%) 55%,
-    hsl(0deg 0% 0%) 100%
-  );
+position: relative;
+font-size: 3rem;
+text-align: left;
+color: white;
+padding: 1%;
+background-image: linear-gradient(
+  45deg,
+  hsl(22deg 87% 39%) 0%,
+  hsl(22deg 100% 34%) 7%,
+  hsl(19deg 100% 31%) 11%,
+  hsl(15deg 100% 28%) 15%,
+  hsl(9deg 100% 25%) 18%,
+  hsl(0deg 100% 22%) 22%,
+  hsl(0deg 100% 19%) 28%,
+  hsl(0deg 100% 16%) 37%,
+  hsl(0deg 100% 14%) 55%,
+  hsl(0deg 0% 0%) 100%
+);
 }
 
 .recent-work img {
-  border-radius: 10%;
-  box-shadow: 3px 3px 3px 3px #BC4C0D;
+border-radius: 10%;
 }
-
-
 /* --- /RECENT-WORK-CARDS --- */
 
 /* --- FOOTER --- */
 .footer {
-  clip-path: polygon(50% 0%, 100% 38%, 100% 100%, 0 100%, 0% 38%);
-  width: 100%;
-  height: 15rem;
-  background-image: linear-gradient(
-    45deg,
-    hsl(22deg 87% 39%) 0%,
-    hsl(22deg 100% 34%) 7%,
-    hsl(19deg 100% 31%) 11%,
-    hsl(15deg 100% 28%) 15%,
-    hsl(9deg 100% 25%) 18%,
-    hsl(0deg 100% 22%) 22%,
-    hsl(0deg 100% 19%) 28%,
-    hsl(0deg 100% 16%) 37%,
-    hsl(0deg 100% 14%) 55%,
-    hsl(0deg 0% 0%) 100%
-  );
-  bottom: 0;
-  margin-top: 7rem;
+clip-path: polygon(50% 0%, 100% 38%, 100% 100%, 0 100%, 0% 38%);
+width: 100%;
+height: 5rem;
+background-image: linear-gradient(
+  45deg,
+  hsl(22deg 87% 39%) 0%,
+  hsl(22deg 100% 34%) 7%,
+  hsl(19deg 100% 31%) 11%,
+  hsl(15deg 100% 28%) 15%,
+  hsl(9deg 100% 25%) 18%,
+  hsl(0deg 100% 22%) 22%,
+  hsl(0deg 100% 19%) 28%,
+  hsl(0deg 100% 16%) 37%,
+  hsl(0deg 100% 14%) 55%,
+  hsl(0deg 0% 0%) 100%
+);
+bottom: 0;
+margin-top: 4rem;
 }
 /* --- FOOTER --- */
