--- a/design/styles.css
+++ b/design/styles.css
@@ -123,7 +123,7 @@ z-index: 10;
 .nav {
 background-image: linear-gradient(
   45deg,
-  hsl(22deg 87% 39%) 0%,
+  hsl(22, 87%, 39%) 0%,
   hsl(22deg 100% 34%) 7%,
   hsl(19deg 100% 31%) 11%,
   hsl(15deg 100% 28%) 15%,
