--- a/design/styles.css
+++ b/design/styles.css
@@ -123,7 +123,7 @@ z-index: 10;
 .nav {
 background-image: linear-gradient(
   45deg,
-  hsl(22, 87%, 39%) 0%,
+  #ba4c0d 0%,
   hsl(22deg 100% 34%) 7%,
   hsl(19deg 100% 31%) 11%,
   hsl(15deg 100% 28%) 15%,
@@ -143,6 +143,10 @@ background-image: linear-gradient(
   font-style: normal;
   color: white;
   font-size: 1rem;
+}
+
+.nav-link:hover {
+  color: black;
 }
 
 .landing-page-description {
@@ -176,6 +180,7 @@ font-family: ff-ginger-pro,sans-serif;
 font-weight: 200;
 font-style: normal;
 border: 5px solid white;
+padding: 3%;
 }
 
 .skill h5 {
@@ -206,7 +211,7 @@ font-family: ff-ginger-pro,sans-serif;
 font-weight: 200;
 font-style: normal;
 border-radius: 5%;
-padding: 3%;
+padding: 5%;
 }
 
 .who h1 {
