--- a/design/styles.css
+++ b/design/styles.css
@@ -169,7 +169,7 @@ font-family: ff-ginger-pro,sans-serif;
 font-weight: 200;
 font-style: normal;
 border: 5px solid white;
-padding: 3%;
+padding: 5%;
 }
 
 .skill h5 {
@@ -319,6 +319,11 @@ background-image: linear-gradient(
 border-radius: 10%;
 }
 /* --- /RECENT-WORK-CARDS --- */
+
+.contact-button {
+  border: 2px solid white;
+  padding: 5px;
+}
 
 /* --- FOOTER --- */
 .footer {
